Commit 3.0. Productivity-Footer

--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
                     </li>
                 </ul>
             </nav>
-            <button class="button-login">Log in</button>
-            <button class="button-try">Try it free</button>
+            <button class="button button-login">Log in</button>
+            <button class="button button-try">Try it free</button>
         </div>
     </header>
     <main>
@@ -46,8 +46,8 @@
                         A localization and translation management platform for agile teams. Embrace automation, workflow transparency, and fast project delivery.
                     </p>
                     <div class="button-box">
-                        <button class="button-try2">Try it free</button>
-                        <button class="button-book">Book a demo</button>
+                        <button class="button button-try2">Try it free</button>
+                        <button class="button button-book">Book a demo</button>
                     </div>
                     <p class="text-trial">
                         Try all features for 14 days · No credit card required
@@ -63,22 +63,34 @@
                 </h2>
                 <ul class="list brand-list">
                     <li class="brand-item">
-                        <img src="images/spec.png" alt="specialized-logo">
+                        <a href="#" class="link">
+                            <img src="images/spec.png" alt="specialized-logo">
+                        </a>
                     </li>
                     <li class="brand-item">
-                        <img src="images/virgin.png" alt="virgin-logo">
+                        <a href="#" class="link">
+                            <img src="images/virgin.png" alt="virgin-logo">
+                        </a>
                     </li>
                     <li class="brand-item">
-                        <img src="images/tidal.png" alt="tidal-logo">
+                        <a href="#" class="link">
+                            <img src="images/tidal.png" alt="tidal-logo">
+                        </a>
                     </li>
                     <li class="brand-item">
-                        <img src="images/revolut.png" alt="revolut-logo">
+                        <a href="#" class="link">
+                            <img src="images/revolut.png" alt="revolut-logo">
+                       </a>
                     </li>
                     <li class="brand-item">
-                        <img src="images/yelp.png" alt="yelp-logo">
+                        <a href="#" class="link">
+                            <img src="images/yelp.png" alt="yelp-logo">
+                        </a>
                     </li>
                     <li class="brand-item">
-                        <img src="images/daimler.png" alt="daimler-logo">
+                        <a href="#" class="link">
+                            <img src="images/daimler.png" alt="daimler-logo">
+                        </a>
                     </li>
                 </ul>
             </div>
@@ -227,6 +239,252 @@
                 </ul>
             </div>
         </section>
+        <section class="feedback">
+            <div class="container feedback__container">
+                <div class="feedback__card">
+                    <p class="feedback__text">
+                        “Lokalise has turned a task we were dreading into an absolute pleasure. Great platform, intuitive UX, powerful API. The automatic text recognition for screenshots has been a lifesaver, and over-the-air updates are the icing on the cake.”
+                    </p>
+                    <p class="feedback__text2">
+                        Edward Cooper, Chief Mobile Officer
+                    </p>
+                    <a href="#" class="link">
+                        <img src="images/revolut.png" alt="revolut-logo" class="feedback__icon">
+                    </a>
+                </div>
+                <img src="images/photo.png" alt="photo" class="feedback__photo">
+            </div>
+        </section>
+        <section class="rating">
+            <div class="container rating__container">
+                <img src="images/cake.png" alt="cake" class="rating__image">
+                <p class="rating__text">
+                    The most-loved translation management software
+                </p>
+                <div class="rating__card rating__card_line">
+                    <img src="images/g2.png" alt="g2-logo" class="rating__icon">
+                    <img src="images/stars.png" alt="stars" class="rating__rate">
+                    <p class="rating__description">USERS LOVE US</p>
+                </div>
+                <div class="rating__card">
+                    <img src="images/capterra.png" alt="capterra-logo" class="rating__icon">
+                    <img src="images/stars.png" alt="stars" class="rating__rate">
+                    <p class="rating__description">HIGHEST RATED</p>
+                </div>
+            </div>
+        </section>
+        <section class="integrate">
+            <div class="container">
+                <h1 class="title integrate__title">Integrate Lokalise with your work tools</h1>
+                <p class="text integrate__text">
+                    Automate processes, eliminate routine tasks, and track progress with ease.
+                </p>
+                <img src="images/bird.png" alt="bird" class="integrate__image">
+                <button class="button integrate__button">
+                    See all integrations
+                </button>
+            </div>
+        </section>
+        <section class="try">
+            <div class="container">
+                <h1 class="title try__title">Localization made easy. Why wait?</h1>
+                <p class="text try__text">
+                    Try for free or let us show you how it works.
+                </p>
+                <button class="button try__button">Try it free</button>
+            </div>
+        </section>
     </main>
+    <footer class="footer">
+        <div class="container">
+            <div class="footer__box footer__box_1">
+                <div class="footer__card">
+                    <h3 class="footer__card-title">Case Studies</h3>
+                    <img src="images/race.png" alt="cycling-race" class="footer__card-image">
+                    <a href="#" class="link">
+                        <img src="images/spec.png" alt="specialized-logo" class="footer__card-logo">
+                    </a>
+                    <p class="text footer__card-text">
+                        Riding towards global success with a 100% teammate enthusiasm
+                    </p>
+                    <a href="#" class="text link">Read more</a>
+                </div>
+                <ul class="list footer__list">
+                    <li class="footer__item">
+                        <h6 class="footer__item-title">Product</h6>
+                        <ul class="footer__list-second">
+                            <li class="footer__item-second">
+                                <a href="#" class="link footer__item-text">
+                                    For developers
+                                </a>
+                            </li>
+                            <li class="footer__item-second">
+                                <a href="#" class="link footer__item-text">
+                                    For managers
+                                </a>
+                            </li>
+                            <li class="footer__item-second">
+                                <a href="#" class="link footer__item-text">
+                                    For translators
+                                </a>
+                            </li>
+                            <li class="footer__item-second">
+                                <a href="#" class="link footer__item-text">
+                                    For designers
+                                </a>
+                            </li>
+                            <li class="footer__item-second">
+                                <a href="#" class="link footer__item-text">
+                                    Integrations
+                                </a>
+                            </li>
+                            <li class="footer__item-second">
+                                <a href="#" class="link footer__item-text">
+                                    Security
+                                </a>
+                            </li>
+                            <li class="footer__item-second">
+                                <a href="#" class="link footer__item-text">
+                                    Pricing
+                                </a>
+                            </li>
+                            <li class="footer__item-second">
+                                <a href="#" class="link footer__item-text">
+                                Automations
+                               </a>
+                            </li>
+                        </ul>
+                    </li>
+                    <li class="footer__item">
+                        <h6 class="footer__item-title">Support</h6>
+                        <ul class="footer__list-second">
+                            <li class="footer__item-second">
+                                <a href="#" class="link footer__item-text">
+                                    Contact
+                                </a>
+                            </li>
+                            <li class="footer__item-second">
+                                <a href="#" class="link footer__item-text">
+                                    Documentation
+                                </a>
+                            </li>
+                            <li class="footer__item-second">
+                                <a href="#" class="link footer__item-text">
+                                    Status
+                                </a>
+                            </li>
+                            <li class="footer__item-second">
+                                <a href="#" class="link footer__item-text">
+                                    Product Updates
+                                </a>
+                            </li>
+                            <li class="footer__item-second">
+                                <a href="#" class="link footer__item-text">
+                                    CLI Tool
+                                </a>
+                            </li>
+                            <li class="footer__item-second">
+                                <a href="#" class="link footer__item-text">
+                                    API Reference
+                                </a>
+                            </li>
+                            <li class="footer__item-second">
+                                <a href="#" class="link footer__item-text">
+                                    iOS and Android SDK
+                                </a>
+                            </li>
+                            <li class="footer__item-second">
+                                <a href="#" class="link footer__item-text">
+                                    Supported File Formats
+                               </a>
+                            </li>
+                        </ul>
+                    </li>
+                    <li class="footer__item">
+                        <h6 class="footer__item-title">Company</h6>
+                        <ul class="footer__list-second">
+                            <li class="footer__item-second">
+                                <a href="#" class="link footer__item-text">
+                                    About
+                                </a>
+                            </li>
+                            <li class="footer__item-second">
+                                <a href="#" class="link footer__item-text">
+                                    Blog
+                                </a>
+                            </li>
+                            <li class="footer__item-second">
+                                <a href="#" class="link footer__item-text">
+                                    Careers | We`re Hiring
+                                </a>
+                            </li>
+                            <li class="footer__item-second">
+                                <a href="#" class="link footer__item-text">
+                                    Case Studies
+                                </a>
+                            </li>
+                            <li class="footer__item-second">
+                                <a href="#" class="link footer__item-text">
+                                    Media Kit
+                                </a>
+                            </li>
+                        </ul>
+                    </li>
+                    <li class="footer__list-item">
+                        <h6 class="footer__item-title">Legal</h6>
+                        <ul class="footer__list-second">
+                            <li class="footer__item-second">
+                                <a href="#" class="link footer__item-text">
+                                    Terms of Service
+                                </a>
+                            </li>
+                            <li class="footer__item-second">
+                                <a href="#" class="link footer__item-text">
+                                    Privacy Policy
+                                </a>
+                            </li>
+                            <li class="footer__item-second">
+                                <a href="#" class="link footer__item-text">
+                                    Cookie Policy
+                                </a>
+                            </li>
+                            <li class="footer__item-second">
+                                <a href="#" class="link footer__item-text">
+                                    Privacy Shield
+                                </a>
+                            </li>
+                            <li class="footer__item-second">
+                                <a href="#" class="link footer__item-text">
+                                    DPA
+                                </a>
+                            </li>
+                            <li class="footer__item-second">
+                                <a href="#" class="link footer__item-text">
+                                    List of Sub-processors
+                                </a>
+                            </li>
+                            <li class="footer__item-second">
+                                <a href="#" class="link footer__item-text">
+                                    Candidates Privacy Notice
+                                </a>
+                            </li>
+                        </ul>
+                    </li>
+                </ul>
+            </div>
+            <div class="footer__box footer__box_2">
+                <a href="#" class="link">
+                    <img src="images/lokalise.png" alt="logo-icon" class="footer__logo">
+                </a>
+                <p class="footer__text">
+                    Localization workflow for your web and mobile apps, games and digital content.
+                </p>
+                <div class="footer__rights-box">
+                    <p class="footer__years">©2001-2020</p> 
+                    <p class="footer__rights"></p>All rights reserved.</p>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
