Commit 4.0. Adaptivity Header-Profits

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
     <title>Lokalise</title>
@@ -31,8 +32,10 @@
                     </li>
                 </ul>
             </nav>
-            <button class="button button-login">Log in</button>
-            <button class="button button-try">Try it free</button>
+            <div class="button-wrap">
+                <button class="button button-login">Log in</button>
+                <button class="button button-try">Try it free</button>
+            </div>
         </div>
     </header>
     <main>
@@ -58,7 +61,7 @@
         </section>
         <section class="brand">
             <div class="container brand-container">
-                <h2 class="subtitle brand-title">
+                <h2 class="title brand-title">
                     The preferred localization tool of 1500+ companies
                 </h2>
                 <ul class="list brand-list">
@@ -149,7 +152,7 @@
                 </ul>
             </div>
         </section>
-        <section class="examples">
+        <!-- <section class="examples">
             <div class="container">
                 <h2 class="subtitle examples__subtitle">
                     What can you localize with Lokalise?
@@ -199,8 +202,8 @@
                     </li>
                 </ul>
             </div>
-        </section>
-        <section class="productivity">
+        </section> -->
+        <!-- <section class="productivity">
             <div class="container">
                 <h2 class="subtitle productivity__subtitle">
                     Boost your localization team’s productivity tenfold
@@ -238,8 +241,8 @@
                     </li>
                 </ul>
             </div>
-        </section>
-        <section class="feedback">
+        </section> -->
+        <!-- <section class="feedback">
             <div class="container feedback__container">
                 <div class="feedback__card">
                     <p class="feedback__text">
@@ -254,8 +257,8 @@
                 </div>
                 <img src="images/photo.png" alt="photo" class="feedback__photo">
             </div>
-        </section>
-        <section class="rating">
+        </section> -->
+        <!-- <section class="rating">
             <div class="container rating__container">
                 <img src="images/cake.png" alt="cake" class="rating__image">
                 <p class="rating__text">
@@ -272,8 +275,8 @@
                     <p class="rating__description">HIGHEST RATED</p>
                 </div>
             </div>
-        </section>
-        <section class="integrate">
+        </section> -->
+        <!-- <section class="integrate">
             <div class="container">
                 <h1 class="title integrate__title">Integrate Lokalise with your work tools</h1>
                 <p class="text integrate__text">
@@ -284,8 +287,8 @@
                     See all integrations
                 </button>
             </div>
-        </section>
-        <section class="try">
+        </section> -->
+        <!-- <section class="try">
             <div class="container">
                 <h1 class="title try__title">Localization made easy. Why wait?</h1>
                 <p class="text try__text">
@@ -293,9 +296,9 @@
                 </p>
                 <button class="button try__button">Try it free</button>
             </div>
-        </section>
+        </section> -->
     </main>
-    <footer class="footer">
+    <!-- <footer class="footer">
         <div class="container">
             <div class="footer__box footer__box_1">
                 <div class="footer__card">
@@ -485,6 +488,6 @@
                 </div>
             </div>
         </div>
-    </footer>
+    </footer> -->
 </body>
 </html>
